refactor: Delete User patch method
